<resources>
    <string name="app_name" translatable="false">Cemiuiler</string>
    <string name="system_ui_status_bar_icon_nfc" translatable="false">NFC</string>
    <string name="system_ui_status_bar_icon_vpn" translatable="false">VPN</string>
    <string name="location_simulation_gps" translatable="false">GPS</string>
    <string name="system_ui_statusbar_network_speed_speedunits" translatable="false">KMG</string>
    <string name="array_netspeedicons_arrows" translatable="false">△▽ (▲▼)</string>
    <string name="array_netspeedicons_bullets" translatable="false">☖ ⛉ ( ☗ ⛊ )</string>
    <string name="array_netspeedicons_arrows_small" translatable="false">▵ ▿ ( ▴ ▾ )</string>
    <string name="array_netspeedicons_arrows_long1" translatable="false">↑ ↓</string>
    <string name="array_netspeedicons_arrows_long2" translatable="false">⇧ ⇩</string>
    <string name="system_ui_display_toast_title" translatable="false">Toast</string>
    <string name="summary_collapsed_preference_list" translatable="false">%1$s%2$s</string>
    <string name="networkboost" translatable="false">NetworkBoost</string>
    <string name="home_title_custom_anim_param_1_title" translatable="false">BREAK_OPEN</string>
    <string name="home_title_custom_anim_param_2_title" translatable="false">OPEN_FROM_HOME</string>
    <string name="home_title_custom_anim_param_3_title" translatable="false">OPEN_FROM_RECENTS</string>
    <string name="home_title_custom_anim_param_4_title" translatable="false">CLOSE_TO_RECENTS</string>
    <string name="home_title_custom_anim_param_5_title" translatable="false">CLOSE_TO_HOME</string>
    <string name="home_title_custom_anim_param_6_title" translatable="false">CLOSE_FROM_FEED</string>
    <string name="home_title_custom_anim_param_7_title" translatable="false">APP_TO_APP</string>
    <string name="home_title_custom_anim_param_8_title" translatable="false">START_FIRST_TASK</string>
    <string name="home_title_custom_anim_param_RECT_CENTERX_title" translatable="false">RECT_CENTERX</string>
    <string name="home_title_custom_anim_param_RECT_CENTERY_title" translatable="false">RECT_CENTERY</string>
    <string name="home_title_custom_anim_param_RECT_WIDTH_title" translatable="false">RECT_WIDTH</string>
    <string name="home_title_custom_anim_param_RECT_RATIO_title" translatable="false">RECT_RATIO</string>
    <string name="home_title_custom_anim_param_RADIUS_title" translatable="false">RADIUS</string>
    <string name="home_title_custom_anim_param_ALPHA_title" translatable="false">ALPHA</string>
    <string name="xposed_description">Make MIUI Great Again!</string>
    <string name="new_permission_wifi_state_desc">add and delete files on device\'s internal storage</string>
    <string name="new_permission_location_desc">used to provide services such as latitude and longitude</string>
    <string name="new_cta_agree_desc">During use, in order to provide you with more features, we may apply for Root/Su permission from you. You can go to Permission Management at any time to adjust the authorization status of all permissions, and please go to your Root/Su manager for Root/Su permissions.</string>
    <string name="new_cta_app_main_purpose">modify system applications</string>
    <string name="new_cta_app_all_purpose_title">Welcome to Cemiuiler, this application runs on the Xposed framework, you can use this application to hijack and modify other supported applications to achieve MIUI enhancements. During use, in order to provide you with more features, we may apply for Root/Su permission from you. You can go to your Root/Su manager for Root/Su permissions.</string>
    <string name="language">English</string>
    <string name="translator">Ling Qiqi</string>
    <string name="translator_url">https://github.com/mu7220</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_use">Quote</string>
    <string name="about_use_desc">Cemiuiler uses some or all of the following open source projects, thanks to the developers of these projects for their support (in no particular order)</string>
    <string name="about_contributer">Contributor</string>
    <string name="about_contributer_desc">Thanks to the following contributors for their help in the development of Cemiuiler (in no particular order)</string>
    <string name="about_donation">Sponsor</string>
    <string name="about_donation_desc">You can support us by donating here</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_protocol">User Agreement</string>
    <string name="settings_data_title">Backup and Restore</string>
    <string name="settings_bug_title">Troubleshooting</string>
    <string name="settings_debug_title">Debug</string>
    <string name="settings_hide_app_icon">Desktop Icons</string>
    <string name="settings_icon">Settings Icons</string>
    <string name="settings_icon_desc">Set the location of the module entry in the system settings</string>
    <string name="settings_icon_disable">Disable</string>
    <string name="settings_icon_top">Top</string>
    <string name="settings_icon_medium">Middle</string>
    <string name="settings_icon_down">Bottom</string>
    <string name="settings_icon_mode">Icon style</string>
    <string name="settings_icon_miui_14">Rounded rectangle style</string>
    <string name="settings_icon_miui_13">Background cutout style</string>
    <string name="settings_reboot">Restart the target app</string>
    <string name="settings_back">Backup module settings</string>
    <string name="settings_rest">Restore module settings</string>
    <string name="settings_reset">Reset module settings</string>
    <string name="reset_title">Are you sure you want to reset?</string>
    <string name="reset_desc">After resetting the module configuration all its data will be deleted!</string>
    <string name="reset_okay">The module configuration has been reset</string>
    <string name="backup_success">Backup success</string>
    <string name="backup_failed">Backup failed</string>
    <string name="rest_title">Recover</string>
    <string name="rest_success">Recovery succeeded</string>
    <string name="rest_failed">Recovery failed</string>
    <string name="backup_ask">Do you want to write backups?</string>
    <string name="backup_permission">Now you have to manually enable permissions for this option.</string>
    <string name="rest_ask">Do you want to recover your backup?</string>
    <string name="rest_permission">Now you have to manually enable permissions for this option.</string>
    <string name="disable_detailed_log">Disable detailed log</string>
    <string name="disable_detailed_log_desc">Reboot to apply</string>
    <string name="settings_safe_mode">Safe mode</string>
    <string name="settings_safe_mode_desc">Stop module function</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_translator_title">Translator</string>
    <string name="about_chat_title">Discussion</string>
    <string name="about_other_title">Other</string>
    <string name="about_qq_group">QQ Group</string>
    <string name="about_qq_channel">QQ Channel</string>
    <string name="about_tg_group">Telegram Group</string>
    <string name="about_tg_channel">Telegram Channel</string>
    <string name="about_github">Source Code</string>
    <string name="about_github_desc">This project is open source based on the AGPL-3.0 license</string>
    <string name="about_offical">Official website</string>
    <string name="about_crwd">Crowdin</string>
    <string name="about_crwd_desc">Help us translate Cemiuiler into you language</string>
    <string name="soft_reboot">Reboot </string>
    <string name="restart_app_desc">Are you sure you want to restart now %1$s?</string>
    <string name="tip">Tip</string>
    <string name="hook_failed">The module is not activated yet.\nPlease check whether the Xposed manager is enabled. If so, please restart or re-optimize the module.</string>
    <string name="kill_failed">Failed to end process, please check if Cemiuiler has been granted Root/Su permissions?</string>
    <string name="pid_failed">The target application is not running and does not need to be restarted.</string>
    <string name="reboot_failed">Reboot failed, please check if Cemiuiler is granted Root/Su permission?</string>
    <string name="expand_button_title">High level</string>
    <string name="not_set">Not set</string>
    <string name="copy">Copy</string>
    <string name="more">More</string>
    <string name="clearable_edittext_clear_description">Clear up</string>
    <string name="preference_on">Turned on</string>
    <string name="preference_off">Turned off</string>
    <string name="preference_copied">Copied %1$s to clipboard.</string>
    <string name="preference_default_value_text">Default</string>
    <string name="preference_dialog_color_picker_default_title">Choose the color</string>
    <string name="preference_dialog_color_picker_presets">Preset color</string>
    <string name="preference_dialog_color_picker_custom">Custom color</string>
    <string name="preference_dialog_color_picker_transparency">Transparency</string>
    <string name="preference_dialog_color_picker_select">Confirm selection</string>
    <string name="abc_action_bar_home_description">Back to the homepage</string>
    <string name="abc_action_bar_up_description">Back to the previous level</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="appcompat_action_mode_select_all">Select all</string>
    <string name="appcompat_cancel_description">Cancel</string>
    <string name="appcompat_confirm_description">Ok</string>
    <string name="appcompat_select_all_description">Select all</string>
    <string name="appcompat_deselect_all_description">Unselect all</string>
    <string name="appcompat_delete_description">Delete</string>
    <string name="appcompat_search_action_mode_cancel">Cancel</string>
    <string name="appcompat_search_input_description">Search</string>
    <string name="appcompat_actionbar_immersion_button_more_description">More</string>
    <string name="appcompat_action_mode_inverse">Inverse</string>
    <string name="color_picker_alpha_text_transparent">Opacity</string>
    <string name="color_picker_tab_grid">Grid</string>
    <string name="color_picker_tab_slider">Slider</string>
    <string name="color_picker_view_page_text_hue">Hue</string>
    <string name="color_picker_view_page_text_lightness">Lightness</string>
    <string name="color_picker_view_page_text_saturation">Saturation</string>
    <string name="top_margin">Top margin</string>
    <string name="bottom_margin">Bottom margin</string>
    <string name="left_margin">Left margin</string>
    <string name="right_margin">Right margin</string>
    <string name="vertical_offset">Up and down offset</string>
    <string name="horizontal_alignment">Horizontal alignment</string>
    <string name="feature">Function</string>
    <string name="recommend">Recommend</string>
    <string name="editor">Editor</string>
    <string name="record">Record</string>
    <string name="shot">Shot</string>
    <string name="portrait">Portrait</string>
    <string name="camera_pro">Pro</string>
    <string name="enable">Activate</string>
    <string name="custom_enable">Custom enable</string>
    <string name="search">Search</string>
    <string name="floating_window">Freeform</string>
    <string name="save_to_screen_title">Specification save location</string>
    <string name="home_gesture">Gesture and Navigation</string>
    <string name="home_layout">Layout</string>
    <string name="home_folder">Folder</string>
    <string name="home_drawer">Drawer</string>
    <string name="home_title">Icon and Title</string>
    <string name="home_recent">Recent</string>
    <string name="home_widget">Widget</string>
    <string name="home_dock">Dock</string>
    <string name="home_other">Other</string>
</resources>