<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="prefs_key_home_gesture"
        android:title="@string/home_gesture"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeGestureSettings" />

    <Preference
        android:key="prefs_key_home_layout"
        android:title="@string/home_layout"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeLayoutSettings" />

    <Preference
        android:key="prefs_key_home_folder"
        android:title="@string/home_folder"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeFolderSettings" />
    <Preference
        android:key="prefs_key_home_drawer"
        android:title="@string/home_drawer"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeDrawerSettings" />

    <Preference
        android:key="prefs_key_home_title"
        android:title="@string/home_title"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeTitleSettings" />

    <Preference
        android:key="prefs_key_home_recent"
        android:title="@string/home_recent"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeRecentSettings" />

    <Preference
        android:key="prefs_key_home_widget"
        android:title="@string/home_widget"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeWidgetSettings" />

    <Preference
        android:key="prefs_key_home_dock"
        android:title="@string/home_dock"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeDockSettings" />

    <Preference
        android:key="prefs_key_home_other"
        android:title="@string/home_other"
        android:fragment="com.sevtinge.cemiuiler.ui.fragment.home.HomeOtherSettings" />

    <Preference android:enabled="false" />

</PreferenceScreen>