<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:layout="@layout/activity_about"
        android:key="prefs_key_hidden_function"
        android:summary="@string/xposed_description" />
    <SwitchPreference
            android:key="prefs_key_fools_seen_b"
            android:title="已读"
            android:summary="请在阅读后勾选此选项以销毁文件。"
            android:defaultValue="false"
            app:isPreferenceVisible="false"/>
    <EditTextPreference
            android:title="加密文件"
            android:summary="输入密码以解除加密"
            android:key="prefs_key_fools_enable_b"
            app:isPreferenceVisible="false"/>
    <PreferenceCategory
            android:key="prefs_key_fools_enable"
            app:isPreferenceVisible="true">
        <SwitchPreference
                android:key="prefs_key_fools_enable_a"
                android:title="启动软盘驱动程序"
                android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_developer_title">
        <Preference
                android:icon="@drawable/ic_sevtinge"
                android:layout="@layout/preference_round_layout"
                android:title="绀漓 | Sevtinge"
                android:summary="Hook、App Icon">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/sevtinge" />
        </Preference>
        <Preference
                android:icon="@drawable/ic_moralnorm"
                android:layout="@layout/preference_round_layout"
                android:title="MoralNorm"
                android:summary="UI Design、Hook">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/MoralNorm" />
        </Preference>
        <Preference
                android:icon="@drawable/ic_yukonga"
                android:layout="@layout/preference_round_layout"
                android:title="YuKongA"
                android:summary="Hook">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/YuKongA" />
        </Preference>
        <Preference
                android:icon="@drawable/ic_yifeplayte"
                android:layout="@layout/preference_round_layout"
                android:title="Yife Playte"
                android:summary="Hook">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/YifePlayte" />
        </Preference>
        <Preference
                android:title="@string/about_contributer"
                android:key="prefs_key_about_contributer">
            <intent
                    android:targetPackage="com.sevtinge.cemiuiler"
                    android:targetClass="com.sevtinge.cemiuiler.ui.AboutContributerActivity"/>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_translator_title">
        <Preference
                android:title="@string/translator"
                android:summary="@string/language">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/translator_url" />
        </Preference>
        <!--ValuePreference
                android:text="@string/language"
                android:title="@string/translator" /-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_chat_title">
        <Preference
                android:title="@string/about_qq_group"
                android:key="prefs_key_about_join_qq_group" />
        <Preference android:title="@string/about_qq_channel">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://qun.qq.com/qqweb/qunpro/share?_wv=3&amp;_wwv=128&amp;appChannel=share&amp;inviteCode=1XAId3dB6BS&amp;businessType=9&amp;from=246610&amp;biz=ka" />
        </Preference>
        <Preference android:title="@string/about_tg_group">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://t.me/sevtinge_nest" />
        </Preference>
        <Preference android:title="@string/about_tg_channel">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://t.me/sevtinge_mod" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_other_title">
        <Preference
                android:title="@string/about_github"
                >
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/sevtinge/Cemiuiler" />
        </Preference>
        <Preference
                android:title="@string/about_use"
                android:key="prefs_key_about_use">
            <intent
                    android:targetPackage="com.sevtinge.cemiuiler"
                    android:targetClass="com.sevtinge.cemiuiler.ui.AboutUseActivity"/>
        </Preference>
        <Preference
                android:title="@string/about_crwd"
                android:summary="@string/about_crwd_desc">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://crwd.in/cemiuiler" />
        </Preference>
        <Preference
                android:title="@string/about_donation"
                android:summary="@string/about_donation_desc">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://www.sevtinge.cn/t/donation.html" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>